{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "38353fe4-b6c5-43f5-bb10-8270e1594b4a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a0da42b6-11e7-49b3-836f-a6700bebc593",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d53f99f8-ab49-43ea-99da-f675f3538759",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}